--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="../public/fav.ico">
 </head>
 <body alink="red" vlink="green">
-    <!-- <div>
+     <div>
       <span class="bi bi-amazon"></span><a href="http://www.amazon.in" &gt;>Amazon</a>
     <span class="bi bi-house-door"></span>
     <div class="bi bi-facebook"></div>
     <div class="bi bi-globe"></div> 
-    </div> -->
+    </div> 
  
     <h1>&copy; and &trade;</h1>
     <h2>Today is the 9<sup>th</sup> of October and 2<sup>4</sup> =16 always</h2>
