--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <!-- <div>
+    <div>
          <h1>Ajinkya Kale</h1>
     <p>I love to code :)</p>
     <img src="../public/76528.jpg" width="200px" height="200px">
@@ -44,8 +44,8 @@
     <br>
     <b>Love to Apna College &hearts;</b>
     <hr>
-    </div> -->
-   <!-- <table border="black">
+    </div> 
+   <table border="black">
     <caption>A test table with merged cells</caption>
     <tr>
         <th rowspan="2"></th>
@@ -68,12 +68,12 @@
         <td>0.002</td>
         <td>43%</td>
     </tr>
-   </table> -->
-   <!-- <form action="https://www.google.com/search">
+   </table> 
+   <form action="https://www.google.com/search">
     <input type="text" name="q" placeholder="search in google">
     <button>Submits</button>
-   </form> -->
-   <!-- <form action="#action">
+   </form> 
+   <form action="#action">
     <h1>Registration From</h1>
     <input type="text" placeholder="Frist Name" name="fname" id="Frist">
     <input type="text" placeholder="Last Name" name="lname" id="Last">
@@ -91,8 +91,8 @@
         <label for="tos_agree">Yes,I agree</label>
     </div>
     <button>Submit</button>
-   </form> -->
-   <!-- <table border="black">
+   </form> 
+   <table border="black">
     <thead>
         <caption>Student Information</caption>
         <tr>
@@ -133,8 +133,8 @@
     </tbody>
     
 
-   </table> -->
-   <!-- <form action="#action">
+   </table> 
+   <form action="#action">
     <div>
         <label for="name">Name:</label>
         <input type="text" name="name">
@@ -165,8 +165,8 @@
         <label for="newsletter">Subscribe?</label>
     </div>
     <button>Submit</button>
-   </form> -->
-   <!-- <form action="#acion">
+   </form> 
+   <form action="#acion">
     <h1>Feedback Form</h1>
     <div>
         <label for="name">Name:</label>
@@ -194,8 +194,8 @@
         <label for="five">5</label>
     </div>
     <button>Send your message!</button>
-   </form>  -->
-   <!-- <div>
+   </form> 
+  <div>
     <h1>Ozymandias</h1>
    <h3>by Percy Bysshe Shelley</h3>
    <p>
@@ -211,9 +211,8 @@
    <br>
    <button>Comment</button>
    </div>
-    -->
 
-    <!-- <div>
+    <div>
         <h1>Facebook</h1>
         <button class="user-btn">Log in</button>
         <button class="user-btn">Register</button>
@@ -221,18 +220,18 @@
         <label for="search">Search</label>
         <input type="text" placeholder="search your friends" name="search" id="sea">
         <button id="btn">Search</button>
-    </div> -->
-<!-- <div>
+    </div>
+<div>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure nisi quia odio pariatur delectus error nemo, incidunt maxime non consequatur! Molestiae pariatur expedita voluptas omnis, aliquam aspernatur inventore. Id, ipsum!
     Facilis error necessitatibus cumque dolorem, esse reprehenderit, iure quis perferendis perspiciatis, repellendus eum! Atque deserunt libero, cumque vitae iure consectetur nisi quidem sit cum consequatur dignissimos sequi corporis commodi cupiditate.
     Quasi libero eum fugiat iste laboriosam veniam ipsam dicta quibusdam. Ducimus eveniet laborum ex vero doloremque illum dolore dolorum. Quis eos laudantium ullam aperiam at. Ex sed maxime perspiciatis repellat?</p>
-</div> -->
-<!-- <div>
+</div> 
+<div>
 <h3>Story</h3>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, temporibus provident? Animi, explicabo qui? Aliquid officia placeat quibusdam omnis reiciendis iusto soluta quo voluptas quaerat magnam. Doloremque magnam adipisci consectetur.
 Veniam ipsa, vero culpa mollitia, reiciendis error, esse deserunt qui a cumque corrupti provident maxime dolore possimus ad expedita numquam. Dolorum recusandae delectus ipsa necessitatibus quidem eveniet illum fuga quam.</p>
-</div> -->
-<!-- <div>
+</div>
+<div>
     <h1>Main Heading</h1>
     <div>
         <h2>Heading 1</h2>
@@ -250,8 +249,7 @@ Veniam ipsa, vero culpa mollitia, reiciendis error, esse deserunt qui a cumque c
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum inventore nulla iste, quidem, maiores molestiae laudantium iure porro libero distinctio doloremque pariatur. Doloribus delectus porro dolor voluptate illo veritatis dolores?</p>
         <hr>
     </div>
-</div> -->
-<!-- 
+</div> 
 <div>
 <h1 id="mainTopic">CSS Practice</h1>
 <h3>Let'slearnaboutselector.</h3>
@@ -265,17 +263,17 @@ Veniam ipsa, vero culpa mollitia, reiciendis error, esse deserunt qui a cumque c
     <br>
     <button>Learn next!</button>
 </div>
-</div> -->
+</div> 
 
-<!-- <div id="outer">
+<div id="outer">
     <div id="red"></div>
     <div id="yellow"></div>
     <div id="green"></div>
 </div> -->
 
-<!-- <div>
+<div>
     <div id="inner"></div>
-</div> -->
+</div> 
 
 <div id="outer">
     <div class="box" id="red"></div>
